tests/unit/default/syntax-error/013-create-table.e.t
---- IN ----
+%table
---- OUT ----
---- ERR ----
syntax: expected <table-ddl-spec> after `+%table` instead of EOL at position 7 - at line 1
---- EXIT ----
1
